primitivek szerkesztéséből bootstrap kifelé

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <app-dashboard></app-dashboard>
 <div style="height: 10px"></div>
 
-<div style="margin-left: 1vw;margin-right: 1vw;width: auto;">
+<div style="margin-left: 1em;margin-right: 1em;width: auto;">
   <router-outlet></router-outlet>
 </div>
 
