--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -7,21 +7,21 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">ÁFA kulcs</div>
-        <input type="text" class="form-control form-control-sm oszlop2" id="afakulcs"
+        <input type="text" class="editform-edit editform-cw10" id="afakulcs"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Afakulcs1" name="afakulcs">
       </div>
       <div class="editform-row">
         <div class="editform-label">Az ÁFA mértéke, %</div>
-        <input type="number" class="form-control form-control-sm oszlop1" id="egysegar"
+        <input type="number" class="editform-edit editform-cw10" id="egysegar"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
       </div>
     </div>
 
     <div class="editform-okcancel">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
