--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,14 +1,14 @@
 #GoTopBtn {
   display: none;
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  bottom: 1em;
+  right: 2em;
   z-index: 99;
   border: none;
   outline: none;
   background-color: red;
   color: white;
   cursor: pointer;
-  padding: 10px;
-  border-radius: 3px;
+  padding: 0.5em;
+  border-radius: 0.3em;
 }
