--- a/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -7,15 +7,15 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Helységnév</div>
-        <input type="text" class="form-control form-control-sm oszlop4" id="helysegnev"
+        <input type="text" class="editform-edit editform-cw10" id="helysegnev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
       </div>
     </div>
 
     <div class="editform-okcancel">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
