--- a/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
+++ b/src/app/particio/particio-bizonylatnyomtatas/particio-bizonylatnyomtatas.component.html
@@ -6,29 +6,29 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Bizonylatkép iratkód</div>
-          <input type="number" class="form-control form-control-sm oszlop2" id="m1"
+          <input type="number" class="editform-edit editform-cw6" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.BizonylatkepIratkod" name="m1">
       </div>
 
       <div class="editform-row">
           <div class="editform-label">Eredeti példány</div>
-          <input type="number" class="form-control form-control-sm oszlop2" id="m2"
+          <input type="number" class="editform-edit editform-cw6" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.EredetipeldanyokSzama" name="m2">
       </div>
 
       <div class="editform-row">
           <div class="editform-label">Másolatok</div>
-          <input type="number" class="form-control form-control-sm oszlop2" id="m3"
+          <input type="number" class="editform-edit editform-cw6" id="m3"
                  autocomplete="off"
                  [(ngModel)]="cBizonylat.MasolatokSzama" name="m3">
       </div>
     </div>
 
     <div class="editform-okcancel">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
   </form>
 </div>
