--- a/src/app/particio/particio-egy/particio-egy.component.html
+++ b/src/app/particio/particio-egy/particio-egy.component.html
@@ -1,23 +1,23 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>{{particioservice.cim}}</h5>
-  <div style="margin-bottom: 10px">
+  <div style="margin-bottom: 1em">
     <div style="font-size: smaller">{{Dto.Megnevezes}}</div>
   </div>
-  <div>
+  <div style="margin-bottom: 1em">
     <nav>
-      <button (click)="szallito()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="szallito()" class="toolbutton">
         Kibocsátó
       </button>
-      <button (click)="bizonylat()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="bizonylat()" class="toolbutton">
         Bizonylatnyomtatás
       </button>
-      <button (click)="projekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="projekt()" class="toolbutton">
         Projekt iratminta
       </button>
-      <button (click)="volume()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="volume()" class="toolbutton">
         Volume
       </button>
-      <button (click)="email()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button (click)="email()" class="toolbutton">
         eMail
       </button>
     </nav>
