--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -6,25 +6,25 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Név</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m1"
+        <input type="text" class="editform-edit editform-cw15" id="m1"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Nev" name="m1">
       </div>
       <div class="editform-row">
         <div class="editform-label">Irányítószám</div>
-        <input type="text" class="form-control form-control-sm oszlop2" id="m2"
+        <input type="text" class="editform-edit editform-cw6" id="m2"
                autocomplete="off" maxlength="10"
                [(ngModel)]="cSzallito.Iranyitoszam" name="m2">
       </div>
       <div class="editform-row">
         <div class="editform-label">Helységnév</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m3"
+        <input type="text" class="editform-edit editform-cw15" id="m3"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Helysegnev" name="m3">
       </div>
       <div class="editform-row">
         <div class="editform-label">Utca, házszám</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m4"
+        <input type="text" class="editform-edit editform-cw15" id="m4"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Utcahazszam" name="m4">
       </div>
@@ -33,13 +33,13 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Bankszámla 1</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m5"
+        <input type="text" class="editform-edit editform-cw15" id="m5"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla1" name="m5">
       </div>
       <div class="editform-row">
         <div class="editform-label">Bankszámla 2</div>
-        <input type="text" class="form-control form-control-sm oszlop6" id="m6"
+        <input type="text" class="editform-edit editform-cw15" id="m6"
                autocomplete="off" maxlength="50"
                [(ngModel)]="cSzallito.Bankszamla2" name="m6">
       </div>
@@ -48,27 +48,27 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Adó törzsszám</div>
-        <input type="text" class="form-control form-control-sm oszlop3" id="m7"
+        <input type="text" class="editform-edit editform-cw10" id="m7"
                autocomplete="off" maxlength="8"
                [(ngModel)]="cSzallito.Adotorzsszam" name="m7">
       </div>
       <div class="editform-row">
         <div class="editform-label">Adó áfakód</div>
-        <input type="text" class="form-control form-control-sm oszlop2" id="m8"
+        <input type="text" class="editform-edit editform-cw6" id="m8"
                autocomplete="off" maxlength="1"
                [(ngModel)]="cSzallito.Adoafakod" name="m8">
       </div>
       <div class="editform-row">
         <div class="editform-label">Adó megyekód</div>
-        <input type="text" class="form-control form-control-sm oszlop2" id="m9"
+        <input type="text" class="editform-edit editform-cw6" id="m9"
                autocomplete="off" maxlength="2"
                [(ngModel)]="cSzallito.Adomegyekod" name="m9">
       </div>
     </div>
 
     <div class="editform-okcancel">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
 </div>
