--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -6,22 +6,22 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Új volume max. méret</div>
-          <input type="number" class="form-control form-control-sm oszlop3" id="m1"
+          <input type="number" class="editform-edit editform-cw10" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
       </div>
 
       <div class="editform-row">
           <div class="editform-label">Új volume elérési út</div>
-          <input type="text" class="form-control form-control-sm oszlop6" id="m2"
+          <input type="text" class="editform-edit editform-cw15" id="m2"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeEleresiut" name="m2">
       </div>
     </div>
 
     <div class="editform-okcancel">
-      <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
     </div>
   </form>
 </div>
