toolbarfooter bootstrap kifelé

--- a/src/app/tools/toolbar/toolbarfooter/toolbarfooter.component.html
+++ b/src/app/tools/toolbar/toolbarfooter/toolbarfooter.component.html
@@ -1,12 +1,4 @@
-<div class="row no-gutters">
-  <div class="col-sm-4 col-md-3 col-lg-2" style="padding-left:0px; margin-right:5px">
-    <div class="input-group-btn input-group-sm">
-      <span class="input-group-btn input-group-sm">
-        <button [disabled]="!enKereses" (click)="doKereses()" class="btn btn-sm btn-outline-primary" type="button">
-          <i class="fa fa-search" aria-hidden="true"></i>
-          {{rekordszam}} / {{osszesrekord}}
-        </button>
-      </span>
-    </div>
-  </div>
-</div>
+<button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
+  <i class="fa fa-search" aria-hidden="true"></i>
+  {{rekordszam}} / {{osszesrekord}}
+</button>
