--- a/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
+++ b/src/app/csoport/csoport-szerkesztes/csoport-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Csoport</div>
-        <input type="text" class="editform-edit editform-cw10" id="csoport1"
+        <input type="text" class="editform-edit em10width" id="csoport1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Csoport1" name="csoport1">
       </div>
