--- a/src/app/logon/bejelentkezes/bejelentkezes.component.html
+++ b/src/app/logon/bejelentkezes/bejelentkezes.component.html
@@ -6,7 +6,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit editform-cw10" id="azonosito"
+        <input type="text" class="editform-edit em10width" id="azonosito"
                formControlName="azonosito" autocomplete="off" #azonosito>
       </div>
     </div>
@@ -14,7 +14,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Jelszó</div>
-        <input type="password" class="editform-edit editform-cw10" id="jelszo"
+        <input type="password" class="editform-edit em10width" id="jelszo"
                formControlName="jelszo" autocomplete="off" #jelszo>
       </div>
     </div>
