--- a/src/app/logon/jelszocsere/jelszocsere.component.html
+++ b/src/app/logon/jelszocsere/jelszocsere.component.html
@@ -6,7 +6,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Régi jelszó</div>
-        <input type="password" class="editform-edit editform-cw10" id="regijelszo"
+        <input type="password" class="editform-edit em10width" id="regijelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="regijelszo" name="regijelszo">
       </div>
@@ -15,7 +15,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Új jelszó</div>
-        <input type="password" class="editform-edit editform-cw10" id="jelszo"
+        <input type="password" class="editform-edit em10width" id="jelszo"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszo" name="jelszo">
       </div>
@@ -24,7 +24,7 @@
     <div class="editform-row">
       <div>
         <div class="editform-label">Új jelszó újra</div>
-        <input type="password" class="editform-edit editform-cw10" id="jelszoujra"
+        <input type="password" class="editform-edit em10width" id="jelszoujra"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="jelszoujra" name="jelszoujra">
       </div>
