--- a/src/app/particio/particio-email/particio-email.component.html
+++ b/src/app/particio/particio-email/particio-email.component.html
@@ -46,7 +46,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Klienstipus</div>
-        <select type="text" class="editform-edit editform-cw10"
+        <select type="text" class="editform-edit em10width"
                 [(ngModel)]="cEmails[selected].Tipus" name="m1">
           <option>Gmail</option>
         </select>
