--- a/src/app/particio/particio-volume/particio-volume.component.html
+++ b/src/app/particio/particio-volume/particio-volume.component.html
@@ -6,7 +6,7 @@
     <div class="editform-box">
       <div class="editform-row">
           <div class="editform-label">Új volume max. méret</div>
-          <input type="number" class="editform-edit editform-cw10" id="m1"
+          <input type="number" class="editform-edit em10width" id="m1"
                  autocomplete="off"
                  [(ngModel)]="cVolume.UjvolumeMaxmeret" name="m1">
       </div>
