--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -7,13 +7,13 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">ÁFA kulcs</div>
-        <input type="text" class="editform-edit editform-cw10" id="afakulcs"
+        <input type="text" class="editform-edit em10width" id="afakulcs"
                maxlength="10" required autocomplete="off"
                [(ngModel)]="DtoEdited.Afakulcs1" name="afakulcs">
       </div>
       <div class="editform-row">
         <div class="editform-label">Az ÁFA mértéke, %</div>
-        <input type="number" class="editform-edit editform-cw10" id="egysegar"
+        <input type="number" class="editform-edit em10width" id="egysegar"
                required autocomplete="off"
                [(ngModel)]="DtoEdited.Afamerteke" name="egysegar">
       </div>
