--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Azonosító</div>
-        <input type="text" class="editform-edit editform-cw10" id="azonosito"
+        <input type="text" class="editform-edit em10width" id="azonosito"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Azonosito" name="azonosito">
       </div>
