--- a/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
+++ b/src/app/particio/particio-kibocsato/particio-kibocsato.component.html
@@ -48,7 +48,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Adó törzsszám</div>
-        <input type="text" class="editform-edit editform-cw10" id="m7"
+        <input type="text" class="editform-edit em10width" id="m7"
                autocomplete="off" maxlength="8"
                [(ngModel)]="cSzallito.Adotorzsszam" name="m7">
       </div>
