--- a/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
+++ b/src/app/primitiv/fizetesimod/fizetesimod-szerkesztes/fizetesimod-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Fizetési mód</div>
-        <input type="text" class="editform-edit editform-cw10" id="irattipus1"
+        <input type="text" class="editform-edit em10width" id="irattipus1"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="DtoEdited.Fizetesimod1" name="irattipus1">
       </div>
