--- a/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
+++ b/src/app/primitiv/helyseg/helyseg-szerkesztes/helyseg-szerkesztes.component.html
@@ -7,7 +7,7 @@
     <div class="editform-box">
       <div class="editform-row">
         <div class="editform-label">Helységnév</div>
-        <input type="text" class="editform-edit editform-cw10" id="helysegnev"
+        <input type="text" class="editform-edit em10width" id="helysegnev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="DtoEdited.Helysegnev" name="helysegnev">
       </div>
