--- a/src/app/tools/toolbar/toolbar.component.html
+++ b/src/app/tools/toolbar/toolbar.component.html
@@ -1,35 +1,17 @@
-<div class="row no-gutters toolbarmargins">
-  <div class="toolbarcontrolmargins">
-    <select [disabled]="!enKereses" #Szempont type="text" class="form-control form-control-sm">
-      <option *ngFor="let sz of Szurok; let i = index" [value]="i" [selected]="i == _szempont">{{sz}}</option>
-    </select>
-  </div>
-  <div class="toolbarcontrolmargins" style="width: 120px">
-    <input [disabled]="!enKereses" #Minta type="text" class="form-control form-control-sm">
-  </div>
+<div class="toolbar">
+  <select [disabled]="!enKereses" #Szempont type="text" class="toolcombo">
+    <option *ngFor="let sz of Szurok; let i = index" [value]="i" [selected]="i == _szempont">{{sz}}</option>
+  </select>
 
-  <div class="float-right" role="toolbar" aria-label="Gombok">
-    <div class="btn-group btn-group-sm" role="group" aria-label="Gombok">
-      <button [disabled]="!enKereses"
-              (click)="doKereses()"
-              class="btn btn-outline-primary toolbarcontrolmargins"
-              type="button">
-        <i class="fa fa-search" aria-hidden="true"></i>
-      </button>
-      <button *ngIf="visUj"
-              [disabled]="!enUj"
-              (click)="doUj()"
-              class="btn btn-sm btn-outline-primary toolbarcontrolmarginskozel"
-              type="button">
-        <i class="fa fa-plus" aria-hidden="true"></i>
-      </button>
-      <button *ngIf="visZoom"
-              (click)="doStopZoom()"
-              class="btn btn-sm btn-outline-primary toolbarcontrolmarginskozel"
-              type="button">
-        <i class="fa fa-close" aria-hidden="true"></i>
-      </button>
-    </div>
-  </div>
+  <input [disabled]="!enKereses" #Minta type="text" class="tooledit em10width">
+  <button [disabled]="!enKereses" (click)="doKereses()" class="toolbutton" type="button">
+    <i class="fa fa-search" aria-hidden="true"></i>
+  </button>
+  <button *ngIf="visUj" [disabled]="!enUj" (click)="doUj()" class="toolbutton" type="button">
+    <i class="fa fa-plus" aria-hidden="true"></i>
+  </button>
+  <button *ngIf="visZoom" (click)="doStopZoom()" class="toolbutton" type="button">
+    <i class="fa fa-close" aria-hidden="true"></i>
+  </button>
 </div>
 
