--- a/src/app/riport/riport.component.html
+++ b/src/app/riport/riport.component.html
@@ -3,26 +3,26 @@
   <div style="paddig-top: 6px;padding-bottom: 6px">
     <nav>
       <a routerLink="kimenoszamla">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Kimenő számla</button>
+        <button class="toolbutton">Kimenő számla</button>
       </a>
       <a routerLink="bejovoszamla">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Bejövő számla</button>
+        <button class="toolbutton">Bejövő számla</button>
       </a>
 
       <a routerLink="koveteles">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Követelések</button>
+        <button class="toolbutton">Követelések</button>
       </a>
       <a routerLink="tartozas">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Tartozások</button>
+        <button class="toolbutton">Tartozások</button>
       </a>
       <a routerLink="beszerzes">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Beszerzés</button>
+        <button class="toolbutton">Beszerzés</button>
       </a>
       <a routerLink="keszlet">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Készlet</button>
+        <button class="toolbutton">Készlet</button>
       </a>
       <a routerLink="ngm">
-        <button style="margin-right:3px;margin-bottom:3px" class="btn btn-sm btn-outline-primary">Adóhatósági ellenőrzési adatszolgáltatás</button>
+        <button class="toolbutton">Adóhatósági ellenőrzési adatszolgáltatás</button>
       </a>
     </nav>
   </div>
