--- a/src/app/ajanlat/ajanlat/ajanlat.html
+++ b/src/app/ajanlat/ajanlat/ajanlat.html
@@ -66,11 +66,9 @@
       </app-ajanlat-tetel>
     </ng-template>
 
-    <div class="row no-gutters editform-row">
-      <button class="btn btn-sm btn-primary"
-              type="button" (click)="onSubmit()">Ok</button>
-      <button class="btn btn-sm btn-default"
-              style="margin-left:3px;" type="button" (click)="onCancel()">Mégsem</button>
+    <div class="editform-okcancel">
+      <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
+      <button class="editform-cancelbutton" type="button" (click)="onCancel()">Mégsem</button>
     </div>
 </div>
 
