--- a/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
+++ b/src/app/bizonylat/bizonylat-errol/bizonylat-errol.component.html
@@ -17,16 +17,16 @@
         </div>
       </div>
 
-      <div class="row no-gutters editform-row">
-        <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
-        <button class="btn btn-sm btn-default"  style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
+      <div class="editform-okcancel">
+        <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
+        <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
       </div>
     </ng-container>
 
     <ng-container *ngIf="kesz">
       <div>Az új bizonylat elkészült, bizonylatkód: {{ujbizonylatkod}}</div>
-      <div class="row no-gutters editform-row">
-        <button class="btn btn-sm btn-primary" [disabled]="!f.valid" type="submit">Ok</button>
+      <div class="editform-okcancel">
+        <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
       </div>
     </ng-container>
   </form>
