--- a/src/app/cikk/cikk-list/cikk-list.component.html
+++ b/src/app/cikk/cikk-list/cikk-list.component.html
@@ -26,22 +26,22 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
+      <div class="buttonbar">
         <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
 
-          <button [disabled]="!jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
-          <button [disabled]="!jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
-          <button (click)="doNav(28)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(28)" class="toolbutton">
             Beszerzés
           </button>
-          <button (click)="doNav(29)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(29)" class="toolbutton">
             Kivét
           </button>
         </nav>
