--- a/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -28,12 +28,11 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div style="margin-bottom: 1em">
+      <div class="buttonbar">
         <nav>
           <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
-
           <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
