új megközelítés: primitívek

--- a/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-list/afakulcs-list.component.html
@@ -28,19 +28,19 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div class="buttonbar">
-        <nav>
-          <button (click)="doNav(1)" class="toolbutton">
-            <i class="fa fa-file" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
-            <i class="fa fa-minus" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
-            <i class="fa fa-edit" aria-hidden="true"></i>
-          </button>
-        </nav>
-      </div>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+            <button (click)="doNav(1)" class="toolbutton">
+              <i class="fa fa-file" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(2)" class="toolbutton">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(3)" class="toolbutton">
+              <i class="fa fa-edit" aria-hidden="true"></i>
+            </button>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
