--- a/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
+++ b/src/app/primitiv/helyseg/helyseg-list/helyseg-list.component.html
@@ -26,19 +26,19 @@
   </ng-template>
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-file" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-minus" aria-hidden="true"></i>
-          </button>
-          <button [disabled]="!jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-edit" aria-hidden="true"></i>
-          </button>
-        </nav>
-      </div>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+            <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              <i class="fa fa-file" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+            <button [disabled]="!jog" (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+              <i class="fa fa-edit" aria-hidden="true"></i>
+            </button>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
