--- a/src/app/csoport/csoport-list/csoport-list.component.html
+++ b/src/app/csoport/csoport-list/csoport-list.component.html
@@ -22,26 +22,26 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <ng-container *ngIf="bbmode === 1">
+       <div>
+          <button (click)="doNav(1)" class="toolbutton">
             <i class="fa fa-file" aria-hidden="true"></i>
           </button>
-          <button (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(2)" class="toolbutton">
             <i class="fa fa-minus" aria-hidden="true"></i>
           </button>
-          <button (click)="doNav(3)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(3)" class="toolbutton">
             <i class="fa fa-edit" aria-hidden="true"></i>
           </button>
 
-          <button (click)="doNav(11)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(11)" class="toolbutton">
             Felhasználó
           </button>
-          <button (click)="doNav(12)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+          <button (click)="doNav(12)" class="toolbutton">
             Jog
           </button>
-        </nav>
-      </div>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
