--- a/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
+++ b/src/app/dokumentum/dokumentum-list/dokumentum-list.component.html
@@ -14,9 +14,9 @@
              [colsets]="dokumentumservice.GridSettings"
              [letoltes]="true"
              [nezet]="true"
-             (forview)="onNezet($event)"
+             (forview)="onNezetDirekt($event)"
              (forid)="onId($event)"
-             (fordownload)="onLetoltesDirekt($event)"
+             (fordownload)="onKimentesDirekt($event)"
              [ujTemplate]="griduj"
              [egyTemplate]="gridegy">
   </app-tabla>
@@ -29,25 +29,26 @@
 
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <nav>
-          <button (click)="doNav(1)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-file" aria-hidden="true"></i>
-          </button>
-          <button (click)="doNav(2)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            <i class="fa fa-minus" aria-hidden="true"></i>
-          </button>
-          <button (click)="onLetoltes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Letöltés
-          </button>
-          <button (click)="onLetoltesPDF()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Letöltés PDF-ben
-          </button>
-          <button (click)="doNav(38)" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-            Nézet
-          </button>
-        </nav>
-      </div>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+            <button (click)="doNav(1)" class="toolbutton">
+              <i class="fa fa-file" aria-hidden="true"></i>
+            </button>
+            <button (click)="doNav(2)" class="toolbutton">
+              <i class="fa fa-minus" aria-hidden="true"></i>
+            </button>
+
+            <button (click)="onKimentes()" class="toolbutton">
+              Letöltés
+            </button>
+            <button (click)="onNezet()" class="toolbutton">
+              Nézet
+            </button>
+            <button (click)="onKimentesPDF()" class="toolbutton">
+              Letöltés PDF-ben
+            </button>
+        </div>
+      </ng-container>
 
       <!--  export enum DokumentumEgyMode {
         Reszletek = 1,
