új megközelítés: projekt bizonylat és irat

--- a/src/app/irat/irat-list/irat-list.component.html
+++ b/src/app/irat/irat-list/irat-list.component.html
@@ -30,6 +30,8 @@
     <app-irat-egy [DtoOriginal]="Dto[DtoSelectedIndex]"
                   [enTorles]="true"
                   [enProjekt]="enProjekt"
+                  [(bbmode)]="egyirat_bbmode"
+                  [(egymode)]="egyirat_egymode"
                   (eventSzerkesztesutan)="onSzerkesztesutan($event)"
                   (eventTorlesutan)="onTorlesutan()">
     </app-irat-egy>
