--- a/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
+++ b/src/app/projektkapcsolat/projektkapcsolat-list/projektkapcsolat-list.component.html
@@ -48,6 +48,8 @@
                   [enTorles]="false"
                   [enProjekt]="false"
                   [enUgyfel]="false"
+                  [(bbmode)]="egyirat_bbmode"
+                  [(egymode)]="egyirat_egymode"
                   (eventSzerkesztesutan)="onIratSzerkesztesutan($event)">
     </app-irat-egy>
   </ng-template>
