--- a/src/app/irat/irat-egy/irat-egy.component.html
+++ b/src/app/irat/irat-egy/irat-egy.component.html
@@ -1,33 +1,34 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <div>
-    <button (click)="doReszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
-    </button>
+  <ng-container *ngIf="bbmode === 1">
+    <div>
+      <button (click)="doNav(1)" class="toolbutton">
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
+      </button>
 
-    <button [disabled]="!jog || !enTorles"
-            (click)="doTorles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      <i class="fa fa-minus" aria-hidden="true"></i>
-    </button>
-    <button [disabled]="!jog"
-            (click)="doModositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      <i class="fa fa-edit" aria-hidden="true"></i>
-    </button>
+      <button [disabled]="!jog || !enTorles"
+              (click)="doNav(2)" class="toolbutton">
+        <i class="fa fa-minus" aria-hidden="true"></i>
+      </button>
+      <button [disabled]="!jog"
+              (click)="doNav(3)" class="toolbutton">
+        <i class="fa fa-edit" aria-hidden="true"></i>
+      </button>
 
-    <button (click)="doDokumentum()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      Dokumentum
-    </button>
-    <button (click)="doFotozaslink()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      Fotózás link
-    </button>
-    <button [disabled]="!enProjekt" (click)="doProjekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      Projekt
-    </button>
-    <button (click)="doVagolap()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-      <i class="fa fa-angle-right" style="margin-right: 3px" aria-hidden="true"></i>
-      Vágólapra
-    </button>
-    <app-abu></app-abu>
-  </div>
+      <button (click)="doNav(15)" class="toolbutton">
+        Dokumentum
+      </button>
+      <button (click)="doNav(16)" class="toolbutton">
+        Fotózás link
+      </button>
+      <button [disabled]="!enProjekt" (click)="doNav(8)" class="toolbutton">
+        Projekt
+      </button>
+      <button (click)="doNav(41)" class="toolbutton">
+        <i class="fa fa-angle-right" style="margin-right: 3px" aria-hidden="true"></i>
+        Vágólapra
+      </button>
+    </div>
+  </ng-container>
 
   <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
@@ -64,12 +65,7 @@
 
   <ng-container *ngIf="egymode === 8">
     <div [@rowanimation]>
-      <h5 *ngIf="nincsProjekt">Az irat nem tartozik projekthez</h5>
-      <app-reszletek *ngIf="!nincsProjekt"
-                     [cim]="projektservice.cim"
-                     [item]="IratProjektje"
-                     [colsets]="projektservice.ReszletekSettings">
-      </app-reszletek>
+      <app-irat-projektje [item]="Dto"></app-irat-projektje>
     </div>
   </ng-container>
 
@@ -78,6 +74,13 @@
       <app-fotozas-link [DtoOriginal]="Dto"
                         (eventSzerkeszteskesz)="onFotozaslinkKesz($event)">
       </app-fotozas-link>
+    </div>
+  </ng-container>
+
+  <ng-container *ngIf="egymode === 41">
+    <div [@rowanimation]>
+      <app-vagolap-irathoz [item]="Dto">
+      </app-vagolap-irathoz>
     </div>
   </ng-container>
 </div>
