új megközelítés: bizonylat most

--- a/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
+++ b/src/app/bizonylat/bizonylat-list/bizonylat-list.component.html
@@ -32,6 +32,8 @@
                        [bizonylatTipus]="bizonylatTipus"
                        [bizonylatLeiro]="bizonylatLeiro"
                        [enTorles]="true"
+                       [(bbmode)]="egyirat_bbmode"
+                       [(egymode)]="egyirat_egymode"
                        (eventSzerkesztesutan)="onSzerkesztesutan($event)"
                        (eventTorlesutan)="onTorlesutan()">
     </app-bizonylat-egy>
