--- a/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
+++ b/src/app/bizonylat/bizonylat-egy/bizonylat-egy.component.html
@@ -1,45 +1,45 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
-  <div style="margin-bottom: 1em">
-    <nav>
-      <button (click)="reszletek()" class="toolbutton">
+  <ng-container *ngIf="bbmode === 1">
+    <div>
+      <button (click)="doNav(2)" class="toolbutton">
         <i class="fa fa-file" aria-hidden="true"></i>
       </button>
-      <button [disabled]="!torlesenabled()" (click)="torles()" class="toolbutton">
+      <button [disabled]="!torlesenabled()" (click)="doNav(5)" class="toolbutton">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="!modositasenabled()" (click)="modositas()" class="toolbutton">
+      <button [disabled]="!modositasenabled()" (click)="doNav(6)" class="toolbutton">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
 
-      <button [disabled]="!kibocsatasenabled()" (click)="kibocsatas()" class="toolbutton">
+      <button [disabled]="!kibocsatasenabled()" (click)="doNav(8)" class="toolbutton">
         Kibocsátás
       </button>
-      <button (click)="nyomtatas()" class="toolbutton">
+      <button (click)="doNav(1)" class="toolbutton">
         <i class="fa fa-print" aria-hidden="true"></i>Nyomtatás
       </button>
-      <button [disabled]="!stornoenabled()" (click)="storno()" class="toolbutton">
+      <button [disabled]="!stornoenabled()" (click)="doNav(9)" class="toolbutton">
         Storno
       </button>
-      <button [disabled]="!penztarenabled()" (click)="penztar()" class="toolbutton">
+      <button [disabled]="!penztarenabled()" (click)="doNav(10)" class="toolbutton">
         Pénztár
       </button>
-      <button [disabled]="!fuvarszamlaenabled()" (click)="fuvarszamla()" class="toolbutton">
+      <button [disabled]="!fuvarszamlaenabled()" (click)="doNav(16)" class="toolbutton">
         Fuvarszámla
       </button>
-      <button [disabled]="!kiszallitvaenabled()" (click)="kiszallitva()" class="toolbutton">
+      <button [disabled]="!kiszallitvaenabled()" (click)="doNav(12)" class="toolbutton">
         Kiszállítva
       </button>
-      <button (click)="kifizetes()" class="toolbutton">
+      <button (click)="doNav(3)" class="toolbutton">
         Kifizetés
       </button>
-      <button [disabled]="!kifizetesrendbenenabled()" (click)="kifizetesrendben()" class="toolbutton">
+      <button [disabled]="!kifizetesrendbenenabled()" (click)="doNav(11)" class="toolbutton">
         Kifizetés rendben
       </button>
-      <button (click)="irat()" class="toolbutton">
+      <button (click)="doNav(4)" class="toolbutton">
         Irat
       </button>
-      <button (click)="errol()" class="toolbutton">
+      <button (click)="doNav(7)" class="toolbutton">
         Erről
       </button>
       <button [disabled]="!enProjekt" (click)="doProjekt()" class="toolbutton">
@@ -50,15 +50,9 @@
         Vágólapra
       </button>
 
-<!--      <button [disabled]="!formaiellenorzesenabled()" (click)="formaiellenorzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        Formai ellenőrzés
-      </button>
-      <button [disabled]="!osnxmlenabled()" (click)="osnxml()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        Letöltés online számla formátumban
-      </button>-->
-    </nav>
-    <app-abu></app-abu>
-  </div>
+      <app-abu></app-abu>
+    </div>
+  </ng-container>
 
 <!--  export enum BizonylatEgyMode {
   Blank = 0,
@@ -79,40 +73,40 @@
   Projekt = 15
   }-->
 
-  <ng-container *ngIf="EgyMode === 1">
+  <ng-container *ngIf="egymode === 1">
     <div [@rowanimation]>
       <app-bizonylat-nyomtatas [Bizonylatkod]="Dto.Bizonylatkod">
       </app-bizonylat-nyomtatas>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 2">
+  <ng-container *ngIf="egymode === 2">
     <div [@rowanimation]>
       <app-bizonylat-reszletek [Bizonylatkod]="Dto.Bizonylatkod"
                                [bizonylatLeiro]="bizonylatLeiro">
       </app-bizonylat-reszletek>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 3">
+  <ng-container *ngIf="egymode === 3">
     <div [@rowanimation]>
       <app-kifizetes-list [Bizonylat]="Dto">
       </app-kifizetes-list>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 4">
+  <ng-container *ngIf="egymode === 4">
     <div [@rowanimation]>
       <app-bizonylatkapcsolat-list [Bizonylatkod]="Dto.Bizonylatkod"
                                    [Ugyfelkod]="Dto.Ugyfelkod">
       </app-bizonylatkapcsolat-list>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 5">
+  <ng-container *ngIf="egymode === 5">
     <div [@rowanimation]>
       <app-tetel-torles [cim]="bizonylatLeiro.BizonylatNev"
                         (eventTorles)="onTorles($event)">
       </app-tetel-torles>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 6">
+  <ng-container *ngIf="egymode === 6">
     <div [@rowanimation]>
       <app-bizonylat-szerkesztes [uj]="false"
                                  [bizonylatTipus]="bizonylatTipus"
@@ -123,7 +117,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="EgyMode === 7">
+  <ng-container *ngIf="egymode === 7">
     <div [@rowanimation]>
       <app-bizonylat-errol [Bizonylatkod]="Dto.Bizonylatkod"
                            (eventBizonylaterrolUtan)="onBizonylaterrolUtan($event)">
@@ -131,7 +125,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="EgyMode === 8">
+  <ng-container *ngIf="egymode === 8">
     <div [@rowanimation]>
       <app-bizonylat-kibocsatas [DtoOriginal]="Dto"
                                 [bizonylatLeiro]="bizonylatLeiro"
@@ -140,7 +134,7 @@
       </app-bizonylat-kibocsatas>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 9">
+  <ng-container *ngIf="egymode === 9">
     <div [@rowanimation]>
       <app-bizonylat-storno [DtoOriginal]="Dto"
                             [bizonylatLeiro]="bizonylatLeiro"
@@ -151,7 +145,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="EgyMode === 10">
+  <ng-container *ngIf="egymode === 10">
     <div [@rowanimation]>
       <app-bizonylat-penztar [DtoOriginal]="Dto"
                              [bizonylatTipus]="bizonylatTipus"
@@ -160,7 +154,7 @@
       </app-bizonylat-penztar>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 11">
+  <ng-container *ngIf="egymode === 11">
     <div [@rowanimation]>
       <app-bizonylat-kifizetesrendben [DtoOriginal]="Dto"
                                       [bizonylatLeiro]="bizonylatLeiro"
@@ -168,7 +162,7 @@
       </app-bizonylat-kifizetesrendben>
     </div>
   </ng-container>
-  <ng-container *ngIf="EgyMode === 12">
+  <ng-container *ngIf="egymode === 12">
     <div [@rowanimation]>
       <app-bizonylat-kiszallitva [DtoOriginal]="Dto"
                                  [bizonylatLeiro]="bizonylatLeiro"
@@ -177,23 +171,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="EgyMode === 13">
-    <div [@rowanimation]>
-      <app-bizonylat-formaiellenorzes [Bizonylatkod]="Dto.Bizonylatkod"
-                                      [bizonylatLeiro]="bizonylatLeiro">
-      </app-bizonylat-formaiellenorzes>
-    </div>
-  </ng-container>
-
-  <ng-container *ngIf="EgyMode === 14">
-    <div [@rowanimation]>
-      <app-bizonylat-letoltesonlineszamlaformatumban [Bizonylatkod]="Dto.Bizonylatkod"
-                                                     [bizonylatLeiro]="bizonylatLeiro">
-      </app-bizonylat-letoltesonlineszamlaformatumban>
-    </div>
-  </ng-container>
-
-  <ng-container *ngIf="EgyMode === 15">
+  <ng-container *ngIf="egymode === 15">
     <div [@rowanimation]>
       <h5 *ngIf="nincsProjekt">A bizonylat nem tartozik projekthez</h5>
       <app-reszletek *ngIf="!nincsProjekt"
@@ -204,7 +182,7 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="EgyMode === 16">
+  <ng-container *ngIf="egymode === 16">
     <div [@rowanimation]>
       <app-bizonylat-fuvarszamla  [dtoAnyagszamla]="Dto"
                                   (eventOK)="onFuvarszamlaUtan($event)">
